<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="25dp"
    android:paddingEnd="25dp"
    android:orientation="vertical">

    <View
        android:layout_width="41dp"
        android:layout_height="6dp"
        android:layout_marginTop="15dp"
        android:layout_gravity="center_horizontal"
        android:background="?divider_inline" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/password_reset_email_send"
        android:textColor="?color_dark"
        android:textSize="16sp"
        tools:ignore="SmallSp" />

    <TextView
        android:id="@id/email_verification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/we_sent_verification_code_to"
        android:textColor="?color_dark"
        android:textSize="14sp"
        tools:ignore="SmallSp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="5dp"
            android:text="@string/did_not_get_email"
            android:textColor="?color_dark"
            android:textSize="14sp"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@id/resend_again"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1dp"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/poppins_medium"
            android:layout_marginStart="5dp"
            android:text="@string/tap_here_to_resend_it"
            android:textColor="?color_dark"
            android:textSize="14sp"
            tools:ignore="SmallSp" />

    </LinearLayout>

    <Button
        android:id="@id/agree"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginBottom="25dp"
        android:background="@drawable/input_background_primary"
        android:gravity="center"
        android:paddingStart="25dp"
        android:paddingEnd="25dp"
        android:text="@string/enter_verification_code"
        android:textAllCaps="false"
        android:textColor="?color_light_separate" />

</LinearLayout>