<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?color_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/toolbar_background"
            android:orientation="horizontal"
            android:paddingStart="15dp"
            android:paddingTop="10dp"
            android:paddingEnd="15dp"
            android:paddingBottom="10dp">

            <ImageView
                android:id="@id/go_back"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:paddingTop="5dp"
                android:paddingEnd="5dp"
                android:paddingBottom="5dp"
                android:src="@drawable/icon_back"
                app:tint="?color_dark"
                tools:ignore="ContentDescription,RtlSymmetry" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="3dp"
                android:fontFamily="@font/pacifico_regular"
                android:gravity="center_vertical"
                android:text="@string/edit_navigation"
                android:textColor="?color_dark"
                android:textSize="14sp" />

        </LinearLayout>

        <EditText
            android:id="@id/navigation_title_input"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/input_rectangle_background"
            android:hint="@string/navigation_title"
            android:inputType="text"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textColor="?color_dark"
            android:textColorHint="?color_dark"
            android:textSize="14sp"
            tools:ignore="Autofill" />

        <EditText
            android:id="@id/navigation_link_input"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/input_rectangle_background"
            android:hint="@string/navigation_link"
            android:inputType="textUri"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textColor="?color_dark"
            android:textColorHint="?color_dark"
            android:textSize="14sp"
            tools:ignore="Autofill" />

        <EditText
            android:id="@id/navigation_icon_input"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/input_rectangle_background"
            android:hint="@string/navigation_icon"
            android:inputType="text"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textColor="?color_dark"
            android:textColorHint="?color_dark"
            android:textSize="14sp"
            tools:ignore="Autofill" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:gravity="center_vertical"
            android:layout_marginTop="12dp"
            android:paddingStart="20dp"
            android:background="@drawable/input_rectangle_background"
            android:paddingEnd="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/open_outside_app"
                android:layout_alignParentStart="true"
                android:textColor="?color_dark"
                android:textSize="15sp"
                tools:ignore="RelativeOverlap" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@id/navigation_behavior_switch"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_alignParentEnd="true"
                android:thumb="@drawable/switch_thumb"
                app:track="@drawable/switch_track" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:gravity="center_vertical"
            android:layout_marginTop="12dp"
            android:paddingStart="20dp"
            android:background="@drawable/input_rectangle_background"
            android:paddingEnd="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enable_premium_link"
                android:layout_alignParentStart="true"
                android:textColor="?color_dark"
                android:textSize="15sp"
                tools:ignore="RelativeOverlap" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@id/navigation_premium_switch"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_alignParentEnd="true"
                android:thumb="@drawable/switch_thumb"
                app:track="@drawable/switch_track" />

        </RelativeLayout>

        <Button
            android:id="@id/update_navigation"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/input_background_primary"
            android:text="@string/update_navigation"
            android:textAllCaps="false"
            android:textSize="14sp"
            android:textColor="?color_light_separate" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>