<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="30dp"
    android:background="?color_background">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@id/go_back"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/icon_back"
                android:background="@drawable/rectangle"
                android:padding="11dp"
                app:tint="?color_dark"
                tools:ignore="ContentDescription" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/create_account"
                    android:textColor="?color_dark"
                    android:textSize="17sp" />

                <EditText
                    android:id="@id/username"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginTop="25dp"
                    android:background="@drawable/input_rectangle_background"
                    android:hint="@string/username"
                    android:inputType="text"
                    android:layoutDirection="ltr"
                    android:maxLines="1"
                    android:paddingStart="20dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:textColor="?color_dark"
                    android:textColorHint="?color_dark"
                    android:textSize="14sp"
                    tools:ignore="Autofill,RtlSymmetry,SmallSp,TextFields" />

                <EditText
                    android:id="@id/email"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/input_rectangle_background"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:layoutDirection="ltr"
                    android:maxLines="1"
                    android:paddingStart="20dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:textColor="?color_dark"
                    android:textColorHint="?color_dark"
                    android:textSize="14sp"
                    tools:ignore="Autofill,RtlSymmetry,SmallSp,TextFields" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginTop="12dp">

                    <EditText
                        android:id="@id/password"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:background="@drawable/input_rectangle_background"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:layoutDirection="ltr"
                        android:maxLines="1"
                        android:paddingStart="20dp"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:textColor="?color_dark"
                        android:textColorHint="?color_dark"
                        android:textSize="14sp"
                        tools:ignore="Autofill,RtlSymmetry,SmallSp,TextFields" />

                    <ProgressBar
                        android:id="@id/password_strength_indicator"
                        style="?android:attr/progressBarStyleHorizontal"
                        android:layout_width="match_parent"
                        android:progress="0"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentEnd="true"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginBottom="3dp"
                        android:layout_height="1dp"
                        android:progressDrawable="@drawable/progress_drawable" />

                </RelativeLayout>

                <EditText
                    android:id="@id/confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/input_rectangle_background"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword"
                    android:layoutDirection="ltr"
                    android:maxLines="1"
                    android:paddingStart="20dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:textColor="?color_dark"
                    android:textColorHint="?color_dark"
                    android:textSize="14sp"
                    tools:ignore="Autofill,RtlSymmetry,SmallSp,TextFields" />

                <Button
                    android:id="@id/register"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/input_background_primary"
                    android:text="@string/signup"
                    android:textAllCaps="false"
                    android:textColor="?color_light_separate"
                    android:textSize="14sp" />

                <TextView
                    android:id="@id/login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="5dp"
                    android:text="@string/already_have_account"
                    android:textColor="?color_dark"
                    android:textSize="15sp" />

                <TextView
                    android:id="@id/agreement_notice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="25dp"
                    android:textColorLink="?color_dark"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/agreement_notice"
                    android:textAlignment="center"
                    android:textColor="?color_dark"
                    android:textSize="12sp" />

            </LinearLayout>

        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>

</RelativeLayout>
