<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <View
        android:layout_width="41dp"
        android:layout_height="6dp"
        android:layout_marginTop="15dp"
        android:background="?divider_inline" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/opensans_bold"
        android:text="@string/notifications_preferences"
        android:textColor="?color_dark"
        android:textSize="13sp"
        tools:ignore="SmallSp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="20dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/notification_sound"
                android:textColor="?color_dark"
                android:textSize="15sp"
                tools:ignore="RelativeOverlap" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@id/notification_sound"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_alignParentEnd="true"
                android:thumb="@drawable/switch_thumb"
                app:track="@drawable/switch_track" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/notification_vibration"
                android:layout_alignParentStart="true"
                android:textColor="?color_dark"
                android:textSize="15sp"
                tools:ignore="RelativeOverlap" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@id/notification_vibration"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_alignParentEnd="true"
                android:thumb="@drawable/switch_thumb"
                app:track="@drawable/switch_track" />

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>